<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0."
            android:orientation="vertical">

            <TextView
                android:id="@+id/configProfile"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="Configure Clinic"
                android:textColor="#000000"
                android:textSize="26sp"
                app:fontFamily="sans-serif-smallcaps" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addressField2"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="(Please pick an address)"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/pickLocation"
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ic_geolocate_black" />
            </LinearLayout>

            <TextView
                android:id="@+id/teamNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Address"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">


            <EditText
                android:id="@+id/phoneNumField"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="(Please enter a phone number)"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Phone Number"
                android:textColor="#000000" />


            <EditText
                android:id="@+id/nameField"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="(Please enter a clinic name)"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Name"
                android:textColor="#000000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="Accepted Payments"
                android:textColor="#000000"
                android:textSize="18sp" />


            <CheckBox
                    android:id="@+id/cashCB"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:gravity="center"
                    android:text="Cash"
                    android:textSize="18sp"
                    android:typeface="sans" />

            <CheckBox
                    android:id="@+id/debitCB"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Debit"
                    android:textSize="18sp" />

            <CheckBox
                    android:id="@+id/creditCB"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Credit"
                    android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="Accepted Insurance"
                android:textColor="#000000"
                android:textSize="18sp" />


            <CheckBox
                android:id="@+id/insuranceCB"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:gravity="center"
                android:text="OHIP"
                android:textSize="18sp"
                android:typeface="sans" />

            <CheckBox
                android:id="@+id/insurance2CB"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Private"
                android:textSize="18sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <Button
                android:id="@+id/saveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0."
                android:background="#634D72"
                android:text="Save"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

        <Button
            android:id="@+id/backButton1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0."
            android:background="#9AA4DA"
            android:text="Back"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0." />

    </LinearLayout>

</RelativeLayout>
