...

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/usernameField2"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="(Please enter a username)"
                android:singleLine="true" />
...

            <Space
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <EditText
                android:id="@+id/passwordField2"
                android:layout_width="264dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="(Please enter a password)"
                android:inputType="textPassword"
...
                android:text="Password"
                android:textColor="#000000" />

        </LinearLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#634D72"
            android:text="Sign in"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
...
