...
                android:layout_width="match_parent"
                android:layout_height="33dp" />

        </LinearLayout>

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#634D72"
            android:text="Sign In"
            android:textColor="@android:color/background_light" />
...
