<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:id="@+id/space"
            android:layout_width="411dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0."
            android:orientation="vertical">

            <TextView
                android:id="@+id/configProfile"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="Welcome Employee"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                app:fontFamily="sans-serif-smallcaps" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="403dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="113dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="106dp"
                    android:layout_height="104dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center"
                android:text="Welcome ____, you are logged in as an employee."
                android:textColor="@android:color/black"
                app:fontFamily="sans-serif-light" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/profileButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#634D72"
                android:text="Clinic Profile" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/hoursButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#634D72"
                android:text="Clinic Hours" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/servicesButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#634D72"
                android:text="Clinic Services" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/employeeHoursBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#634D72"
                android:text="Working Hours" />

        </LinearLayout>

        <Button
            android:id="@+id/signoutButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#9AA4DA"
            android:text="Sign Out" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </LinearLayout>

</RelativeLayout>
