...
                            android:gravity="center_horizontal|center_vertical"
                            android:text="Open"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TimePicker
                            android:id="@+id/sundayOpening"
                            android:layout_width="wrap_content"
                            android:layout_height="73dp"
                            android:layout_gravity="center_horizontal"
                            android:timePickerMode="spinner" />

                        <ToggleButton
...
                            android:gravity="center_horizontal|center_vertical"
                            android:text="Close"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <TimePicker
                            android:id="@+id/sundayClosing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:timePickerMode="spinner" />
                    </LinearLayout>
                </LinearLayout>
...

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#634D72"
        android:text="Save" />
...
